--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -477,12 +477,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T21:11:54.948708Z",
-     "start_time": "2023-02-06T21:11:54.866736Z"
+     "end_time": "2023-02-06T21:21:10.434841Z",
+     "start_time": "2023-02-06T21:21:10.403326Z"
     }
    },
    "outputs": [],
@@ -503,7 +503,7 @@
     "        \".py\", 'w')\n",
     "    bash_script.write(r\"\"\"\n",
     "#!/bin/bash\n",
-    "#SBATCH --account=def-cgreenwo\n",
+    "#SBATCH --account=def-cgreenwo_cpu\n",
     "#SBATCH --nodes=1\n",
     "#SBATCH --ntasks-per-node=10\n",
     "#SBATCH --mem=80G\n",
@@ -645,12 +645,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T21:11:56.654910Z",
-     "start_time": "2023-02-06T21:11:55.316156Z"
+     "end_time": "2023-02-06T21:21:11.883429Z",
+     "start_time": "2023-02-06T21:21:10.607859Z"
     }
    },
    "outputs": [],
@@ -750,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
