remove numba JIT compiler for some functions as it makes them slower

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:46:57.327333Z",
-     "start_time": "2023-02-06T08:46:56.537608Z"
+     "end_time": "2023-02-06T22:48:47.999597Z",
+     "start_time": "2023-02-06T22:48:47.149649Z"
     }
    },
    "outputs": [],
@@ -42,13 +42,13 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:46:57.393900Z",
-     "start_time": "2023-02-06T08:46:57.328516Z"
+     "end_time": "2023-02-06T22:48:48.067290Z",
+     "start_time": "2023-02-06T22:48:48.000920Z"
     }
    },
    "outputs": [],
    "source": [
-    "@_njit\n",
+    "# @_njit(cache=True)\n",
     "def _nan_inf_to_0(x):\n",
     "    \"\"\"\n",
     "    To convert NaN to 0 in nopython mode.\n",
@@ -56,7 +56,7 @@
     "    return _np.where(_np.isfinite(x), x, 0.)\n",
     "\n",
     "\n",
-    "@_njit\n",
+    "# @_njit(cache=True)\n",
     "def _joint_to_mi(joint, forward_euler_a=1., forward_euler_b=1.):\n",
     "    # assume that joint likelihood is of shape (len(a), len(b))\n",
     "    # forward_euler step being 1. means discrete r.v.\n",
@@ -125,7 +125,7 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "@_njit\n",
+    "# @_njit(cache=True)\n",
     "def MI_binary_012(a, b):\n",
     "    \"\"\"\n",
     "    calculate mutual information between binary outcome and an SNP variable of 0,1,2\n",
@@ -148,7 +148,7 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "@_njit\n",
+    "# @_njit(cache=True)\n",
     "def MI_012_012(a, b):\n",
     "    \"\"\"\n",
     "    calculate mutual information between two SNPs\n",
@@ -175,7 +175,6 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "# make this function available\n",
     "def MI_continuous_continuous(a,\n",
     "                             b,\n",
     "                             a_N=300,\n",
@@ -206,12 +205,11 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "# make this function available\n",
     "def MI_binary_continuous(a, b, N=500, kernel=\"epa\", bw=\"silverman\"):\n",
     "    return MI_continuous_012(a=b, b=a, N=N, kernel=kernel, bw=bw)\n",
     "\n",
     "\n",
-    "@_njit\n",
+    "@_njit(cache=True)\n",
     "def Pearson_to_MI_Gaussian(corr):\n",
     "    \"\"\"\n",
     "    Assuming the input variables are bivariate Gaussian, convert their Pearson correlatin to mutual information.\n",
@@ -219,7 +217,7 @@
     "    return -.5 * (_np.log(1 + corr) + _np.log(1 - corr))\n",
     "\n",
     "\n",
-    "@_njit\n",
+    "@_njit(cache=True)\n",
     "def MI_to_Linfoot(mi):\n",
     "    \"\"\"\n",
     "    Convert calcualted mutual information estimator to Linfoot's measure of association.\n",
@@ -241,8 +239,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:46:57.506394Z",
-     "start_time": "2023-02-06T08:46:57.395442Z"
+     "end_time": "2023-02-06T22:48:48.153158Z",
+     "start_time": "2023-02-06T22:48:48.068912Z"
     }
    },
    "outputs": [],
@@ -528,8 +526,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:46:57.528724Z",
-     "start_time": "2023-02-06T08:46:57.507638Z"
+     "end_time": "2023-02-06T22:48:48.175263Z",
+     "start_time": "2023-02-06T22:48:48.154306Z"
     }
    },
    "outputs": [],
@@ -992,8 +990,8 @@
    "id": "a07043f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:46:57.544035Z",
-     "start_time": "2023-02-06T08:46:57.529736Z"
+     "end_time": "2023-02-06T22:48:48.190294Z",
+     "start_time": "2023-02-06T22:48:48.176565Z"
     }
    },
    "outputs": [],
@@ -1268,8 +1266,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:47:16.961415Z",
-     "start_time": "2023-02-06T08:46:57.544978Z"
+     "end_time": "2023-02-06T22:49:02.956742Z",
+     "start_time": "2023-02-06T22:48:48.191216Z"
     }
    },
    "outputs": [
@@ -1277,10 +1275,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0010021759238640383\n",
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0010176316609762477\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0017966852483310516\n",
-      "MI estimate between a,a and a,b:  0.11484453582973957 0.0018942218779855419\n"
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.002180769453072908\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.002964574231893462\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0022219287606873523\n",
+      "MI estimate between a,a and a,b:  0.11484453582966159 0.0018942218779887813\n"
      ]
     }
    ],
@@ -1336,8 +1334,8 @@
    "id": "bca5549d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:47:25.875815Z",
-     "start_time": "2023-02-06T08:47:16.962947Z"
+     "end_time": "2023-02-06T22:49:09.390272Z",
+     "start_time": "2023-02-06T22:49:02.957880Z"
     }
    },
    "outputs": [
@@ -1354,7 +1352,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:07<00:00, 21.81it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:05<00:00, 31.98it/s]\n"
      ]
     },
     {
@@ -1406,8 +1404,8 @@
    "id": "f5026fad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:47:29.964010Z",
-     "start_time": "2023-02-06T08:47:25.877710Z"
+     "end_time": "2023-02-06T22:49:11.895530Z",
+     "start_time": "2023-02-06T22:49:09.391859Z"
     }
    },
    "outputs": [
@@ -1471,8 +1469,8 @@
    "id": "d657c60c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:47:52.252847Z",
-     "start_time": "2023-02-06T08:47:29.965959Z"
+     "end_time": "2023-02-06T22:49:24.838898Z",
+     "start_time": "2023-02-06T22:49:11.896741Z"
     }
    },
    "outputs": [
@@ -1480,7 +1478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:22<00:00,  4.45s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:12<00:00,  2.58s/it]\n"
      ]
     },
     {
@@ -1522,8 +1520,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:47:52.257331Z",
-     "start_time": "2023-02-06T08:47:52.254425Z"
+     "end_time": "2023-02-06T22:49:24.842924Z",
+     "start_time": "2023-02-06T22:49:24.840073Z"
     }
    },
    "outputs": [],
@@ -1599,8 +1597,8 @@
    "id": "48e4c7d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:48:19.222254Z",
-     "start_time": "2023-02-06T08:47:52.258695Z"
+     "end_time": "2023-02-06T22:49:50.127906Z",
+     "start_time": "2023-02-06T22:49:24.844133Z"
     }
    },
    "outputs": [
@@ -1608,7 +1606,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 75.79it/s]\n"
+      "100%|███████████████████████████████████████| 2004/2004 [00:24<00:00, 80.64it/s]\n"
      ]
     },
     {
@@ -1637,8 +1635,8 @@
    "id": "d637d850",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:48:29.302759Z",
-     "start_time": "2023-02-06T08:48:19.223268Z"
+     "end_time": "2023-02-06T22:50:00.049823Z",
+     "start_time": "2023-02-06T22:49:50.129840Z"
     }
    },
    "outputs": [
@@ -1646,7 +1644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.66it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 36.32it/s]\n"
      ]
     },
     {
@@ -1663,7 +1661,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 104.86it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 112.35it/s]\n"
      ]
     },
     {
@@ -1680,7 +1678,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 100.72it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 88.68it/s]\n"
      ]
     },
     {
@@ -1719,8 +1717,8 @@
    "id": "d19ddd1c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:48:36.242463Z",
-     "start_time": "2023-02-06T08:48:29.304052Z"
+     "end_time": "2023-02-06T22:50:05.994410Z",
+     "start_time": "2023-02-06T22:50:00.050926Z"
     }
    },
    "outputs": [
@@ -1728,7 +1726,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 2004/2004 [00:06<00:00, 308.58it/s]\n"
+      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 363.14it/s]\n"
      ]
     },
     {
@@ -1764,8 +1762,8 @@
    "id": "4b51a385",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:48:38.332700Z",
-     "start_time": "2023-02-06T08:48:36.243508Z"
+     "end_time": "2023-02-06T22:50:07.991782Z",
+     "start_time": "2023-02-06T22:50:05.995480Z"
     }
    },
    "outputs": [
@@ -1773,7 +1771,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 92.06it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 96.22it/s]\n"
      ]
     },
     {
@@ -1802,8 +1800,8 @@
    "id": "0c9dda67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:49:06.037562Z",
-     "start_time": "2023-02-06T08:48:38.333945Z"
+     "end_time": "2023-02-06T22:50:36.406676Z",
+     "start_time": "2023-02-06T22:50:07.992913Z"
     }
    },
    "outputs": [
@@ -1811,7 +1809,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:27<00:00,  5.52s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:28<00:00,  5.65s/it]\n"
      ]
     },
     {
@@ -1847,8 +1845,8 @@
    "id": "174c8ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:49:13.376508Z",
-     "start_time": "2023-02-06T08:49:06.039202Z"
+     "end_time": "2023-02-06T22:50:43.788708Z",
+     "start_time": "2023-02-06T22:50:36.407804Z"
     }
    },
    "outputs": [
@@ -1856,7 +1854,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 35.86it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 36.62it/s]\n"
      ]
     },
     {
@@ -1873,7 +1871,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 116.43it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 116.72it/s]\n"
      ]
     },
     {
