add garbage collection

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:48:47.999597Z",
-     "start_time": "2023-02-06T22:48:47.149649Z"
+     "end_time": "2023-02-06T23:12:30.702308Z",
+     "start_time": "2023-02-06T23:12:29.872569Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:48:48.067290Z",
-     "start_time": "2023-02-06T22:48:48.000920Z"
+     "end_time": "2023-02-06T23:12:30.768851Z",
+     "start_time": "2023-02-06T23:12:30.703513Z"
     }
    },
    "outputs": [],
@@ -76,6 +76,8 @@
     "    # this is to ensure that estimated MI is positive, to solve an numerical issue\n",
     "    if mi_temp < 0.:\n",
     "        mi_temp = 0.\n",
+    "\n",
+    "    del log_a_marginal, log_b_marginal, log_joint\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -145,6 +147,8 @@
     "\n",
     "    mi_temp = _joint_to_mi(joint=joint)\n",
     "\n",
+    "    del joint\n",
+    "\n",
     "    return mi_temp\n",
     "\n",
     "\n",
@@ -171,6 +175,8 @@
     "    joint[2, 2] = _np.sum(a[_b2] == 2) / len(a)\n",
     "\n",
     "    mi_temp = _joint_to_mi(joint=joint)\n",
+    "\n",
+    "    del joint\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -239,8 +245,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:48:48.153158Z",
-     "start_time": "2023-02-06T22:48:48.068912Z"
+     "end_time": "2023-02-06T23:12:30.886918Z",
+     "start_time": "2023-02-06T23:12:30.770527Z"
     }
    },
    "outputs": [],
@@ -526,8 +532,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:48:48.175263Z",
-     "start_time": "2023-02-06T22:48:48.154306Z"
+     "end_time": "2023-02-06T23:12:30.910483Z",
+     "start_time": "2023-02-06T23:12:30.888084Z"
     }
    },
    "outputs": [],
@@ -990,8 +996,8 @@
    "id": "a07043f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:48:48.190294Z",
-     "start_time": "2023-02-06T22:48:48.176565Z"
+     "end_time": "2023-02-06T23:12:30.925941Z",
+     "start_time": "2023-02-06T23:12:30.911625Z"
     }
    },
    "outputs": [],
@@ -1266,8 +1272,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:49:02.956742Z",
-     "start_time": "2023-02-06T22:48:48.191216Z"
+     "end_time": "2023-02-06T23:12:45.294597Z",
+     "start_time": "2023-02-06T23:12:30.926897Z"
     }
    },
    "outputs": [
@@ -1275,9 +1281,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.002180769453072908\n",
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.002964574231893462\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0022219287606873523\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00043010748980524833\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0007192762854207099\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0017369003621515902\n",
       "MI estimate between a,a and a,b:  0.11484453582966159 0.0018942218779887813\n"
      ]
     }
@@ -1334,8 +1340,8 @@
    "id": "bca5549d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:49:09.390272Z",
-     "start_time": "2023-02-06T22:49:02.957880Z"
+     "end_time": "2023-02-06T23:12:51.590078Z",
+     "start_time": "2023-02-06T23:12:45.296023Z"
     }
    },
    "outputs": [
@@ -1352,7 +1358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:05<00:00, 31.98it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 32.28it/s]\n"
      ]
     },
     {
@@ -1404,8 +1410,8 @@
    "id": "f5026fad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:49:11.895530Z",
-     "start_time": "2023-02-06T22:49:09.391859Z"
+     "end_time": "2023-02-06T23:12:54.254590Z",
+     "start_time": "2023-02-06T23:12:51.591872Z"
     }
    },
    "outputs": [
@@ -1469,8 +1475,8 @@
    "id": "d657c60c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:49:24.838898Z",
-     "start_time": "2023-02-06T22:49:11.896741Z"
+     "end_time": "2023-02-06T23:13:06.669413Z",
+     "start_time": "2023-02-06T23:12:54.255983Z"
     }
    },
    "outputs": [
@@ -1478,7 +1484,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:12<00:00,  2.58s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:12<00:00,  2.48s/it]\n"
      ]
     },
     {
@@ -1520,8 +1526,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:49:24.842924Z",
-     "start_time": "2023-02-06T22:49:24.840073Z"
+     "end_time": "2023-02-06T23:13:06.674245Z",
+     "start_time": "2023-02-06T23:13:06.670948Z"
     }
    },
    "outputs": [],
@@ -1597,8 +1603,8 @@
    "id": "48e4c7d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:49:50.127906Z",
-     "start_time": "2023-02-06T22:49:24.844133Z"
+     "end_time": "2023-02-06T23:13:33.477121Z",
+     "start_time": "2023-02-06T23:13:06.675576Z"
     }
    },
    "outputs": [
@@ -1606,7 +1612,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 2004/2004 [00:24<00:00, 80.64it/s]\n"
+      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 76.08it/s]\n"
      ]
     },
     {
@@ -1635,8 +1641,8 @@
    "id": "d637d850",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:50:00.049823Z",
-     "start_time": "2023-02-06T22:49:50.129840Z"
+     "end_time": "2023-02-06T23:13:43.965100Z",
+     "start_time": "2023-02-06T23:13:33.479239Z"
     }
    },
    "outputs": [
@@ -1644,7 +1650,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 36.32it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.16it/s]\n"
      ]
     },
     {
@@ -1661,7 +1667,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 112.35it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 80.97it/s]\n"
      ]
     },
     {
@@ -1678,7 +1684,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 88.68it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 106.93it/s]\n"
      ]
     },
     {
@@ -1717,8 +1723,8 @@
    "id": "d19ddd1c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:50:05.994410Z",
-     "start_time": "2023-02-06T22:50:00.050926Z"
+     "end_time": "2023-02-06T23:13:49.846831Z",
+     "start_time": "2023-02-06T23:13:43.966192Z"
     }
    },
    "outputs": [
@@ -1726,7 +1732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 363.14it/s]\n"
+      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 368.14it/s]\n"
      ]
     },
     {
@@ -1762,8 +1768,8 @@
    "id": "4b51a385",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:50:07.991782Z",
-     "start_time": "2023-02-06T22:50:05.995480Z"
+     "end_time": "2023-02-06T23:13:51.948036Z",
+     "start_time": "2023-02-06T23:13:49.847794Z"
     }
    },
    "outputs": [
@@ -1771,7 +1777,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 96.22it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 92.99it/s]\n"
      ]
     },
     {
@@ -1800,8 +1806,8 @@
    "id": "0c9dda67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:50:36.406676Z",
-     "start_time": "2023-02-06T22:50:07.992913Z"
+     "end_time": "2023-02-06T23:14:21.898936Z",
+     "start_time": "2023-02-06T23:13:51.949170Z"
     }
    },
    "outputs": [
@@ -1809,7 +1815,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:28<00:00,  5.65s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:29<00:00,  5.96s/it]\n"
      ]
     },
     {
@@ -1845,8 +1851,8 @@
    "id": "174c8ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T22:50:43.788708Z",
-     "start_time": "2023-02-06T22:50:36.407804Z"
+     "end_time": "2023-02-06T23:14:29.600832Z",
+     "start_time": "2023-02-06T23:14:21.900875Z"
     }
    },
    "outputs": [
@@ -1854,7 +1860,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 36.62it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.39it/s]\n"
      ]
     },
     {
@@ -1871,7 +1877,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 116.72it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 108.32it/s]\n"
      ]
     },
     {
