--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:30.702308Z",
-     "start_time": "2023-02-06T23:12:29.872569Z"
+     "end_time": "2023-02-07T06:13:35.713201Z",
+     "start_time": "2023-02-07T06:13:34.892023Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:30.768851Z",
-     "start_time": "2023-02-06T23:12:30.703513Z"
+     "end_time": "2023-02-07T06:13:35.781805Z",
+     "start_time": "2023-02-07T06:13:35.714390Z"
     }
    },
    "outputs": [],
@@ -74,10 +74,9 @@
     "         log_b_marginal.reshape(1, -1))) * forward_euler_a * forward_euler_b\n",
     "\n",
     "    # this is to ensure that estimated MI is positive, to solve an numerical issue\n",
-    "    if mi_temp < 0.:\n",
-    "        mi_temp = 0.\n",
+    "    mi_temp = _np.max(_np.array([mi_temp, 0.]))\n",
     "\n",
-    "    del log_a_marginal, log_b_marginal, log_joint\n",
+    "    #     del log_a_marginal, log_b_marginal, log_joint\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -122,7 +121,7 @@
     "\n",
     "    mi_temp = _joint_to_mi(joint=joint, forward_euler_a=forward_euler_step)\n",
     "\n",
-    "    del p0, p1, p2, _a, a_temp, _, _b0, y_cond_p0, _b1, y_cond_p1, _b2, y_cond_p2, joint, mask, forward_euler_step\n",
+    "    #     del p0, p1, p2, _a, a_temp, _, _b0, y_cond_p0, _b1, y_cond_p1, _b2, y_cond_p2, joint, mask, forward_euler_step\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -147,7 +146,7 @@
     "\n",
     "    mi_temp = _joint_to_mi(joint=joint)\n",
     "\n",
-    "    del joint\n",
+    "    #     del joint\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -176,7 +175,7 @@
     "\n",
     "    mi_temp = _joint_to_mi(joint=joint)\n",
     "\n",
-    "    del joint\n",
+    "    #     del joint\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -206,7 +205,7 @@
     "                           forward_euler_a=a_forward_euler_step,\n",
     "                           forward_euler_b=b_forward_euler_step)\n",
     "\n",
-    "    del _temp, data, _data, grid, joint, mask, a_forward_euler_step, b_forward_euler_step\n",
+    "    #     del _temp, data, _data, grid, joint, mask, a_forward_euler_step, b_forward_euler_step\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -245,8 +244,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:30.886918Z",
-     "start_time": "2023-02-06T23:12:30.770527Z"
+     "end_time": "2023-02-07T06:13:35.868937Z",
+     "start_time": "2023-02-07T06:13:35.783641Z"
     }
    },
    "outputs": [],
@@ -532,8 +531,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:30.910483Z",
-     "start_time": "2023-02-06T23:12:30.888084Z"
+     "end_time": "2023-02-07T06:13:35.891769Z",
+     "start_time": "2023-02-07T06:13:35.870159Z"
     }
    },
    "outputs": [],
@@ -996,8 +995,8 @@
    "id": "a07043f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:30.925941Z",
-     "start_time": "2023-02-06T23:12:30.911625Z"
+     "end_time": "2023-02-07T06:13:35.906598Z",
+     "start_time": "2023-02-07T06:13:35.892821Z"
     }
    },
    "outputs": [],
@@ -1272,8 +1271,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:45.294597Z",
-     "start_time": "2023-02-06T23:12:30.926897Z"
+     "end_time": "2023-02-07T06:13:50.184794Z",
+     "start_time": "2023-02-07T06:13:35.907837Z"
     }
    },
    "outputs": [
@@ -1281,9 +1280,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00043010748980524833\n",
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0007192762854207099\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0017369003621515902\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  5.5885090551738726e-05\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0007633523654861692\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0017443025980497695\n",
       "MI estimate between a,a and a,b:  0.11484453582966159 0.0018942218779887813\n"
      ]
     }
@@ -1340,8 +1339,8 @@
    "id": "bca5549d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:51.590078Z",
-     "start_time": "2023-02-06T23:12:45.296023Z"
+     "end_time": "2023-02-07T06:13:56.480234Z",
+     "start_time": "2023-02-07T06:13:50.186124Z"
     }
    },
    "outputs": [
@@ -1358,7 +1357,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 32.28it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 32.45it/s]\n"
      ]
     },
     {
@@ -1410,8 +1409,8 @@
    "id": "f5026fad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:12:54.254590Z",
-     "start_time": "2023-02-06T23:12:51.591872Z"
+     "end_time": "2023-02-07T06:13:59.066932Z",
+     "start_time": "2023-02-07T06:13:56.481839Z"
     }
    },
    "outputs": [
@@ -1475,8 +1474,8 @@
    "id": "d657c60c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:13:06.669413Z",
-     "start_time": "2023-02-06T23:12:54.255983Z"
+     "end_time": "2023-02-07T06:14:11.695295Z",
+     "start_time": "2023-02-07T06:13:59.068154Z"
     }
    },
    "outputs": [
@@ -1484,7 +1483,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:12<00:00,  2.48s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:12<00:00,  2.52s/it]\n"
      ]
     },
     {
@@ -1526,8 +1525,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:13:06.674245Z",
-     "start_time": "2023-02-06T23:13:06.670948Z"
+     "end_time": "2023-02-07T06:14:11.699777Z",
+     "start_time": "2023-02-07T06:14:11.696835Z"
     }
    },
    "outputs": [],
@@ -1603,8 +1602,8 @@
    "id": "48e4c7d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:13:33.477121Z",
-     "start_time": "2023-02-06T23:13:06.675576Z"
+     "end_time": "2023-02-07T06:14:38.941574Z",
+     "start_time": "2023-02-07T06:14:11.700666Z"
     }
    },
    "outputs": [
@@ -1612,7 +1611,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 76.08it/s]\n"
+      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 74.75it/s]\n"
      ]
     },
     {
@@ -1641,8 +1640,8 @@
    "id": "d637d850",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:13:43.965100Z",
-     "start_time": "2023-02-06T23:13:33.479239Z"
+     "end_time": "2023-02-07T06:14:49.270873Z",
+     "start_time": "2023-02-07T06:14:38.944030Z"
     }
    },
    "outputs": [
@@ -1650,7 +1649,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.16it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 33.69it/s]\n"
      ]
     },
     {
@@ -1667,7 +1666,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 80.97it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 103.57it/s]\n"
      ]
     },
     {
@@ -1684,7 +1683,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 106.93it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 100.15it/s]\n"
      ]
     },
     {
@@ -1723,8 +1722,8 @@
    "id": "d19ddd1c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:13:49.846831Z",
-     "start_time": "2023-02-06T23:13:43.966192Z"
+     "end_time": "2023-02-07T06:14:55.019728Z",
+     "start_time": "2023-02-07T06:14:49.272148Z"
     }
    },
    "outputs": [
@@ -1732,7 +1731,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 368.14it/s]\n"
+      "100%|██████████████████████████████████████| 2004/2004 [00:05<00:00, 376.38it/s]\n"
      ]
     },
     {
@@ -1768,8 +1767,8 @@
    "id": "4b51a385",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:13:51.948036Z",
-     "start_time": "2023-02-06T23:13:49.847794Z"
+     "end_time": "2023-02-07T06:14:56.918639Z",
+     "start_time": "2023-02-07T06:14:55.021029Z"
     }
    },
    "outputs": [
@@ -1777,7 +1776,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 92.99it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 103.77it/s]\n"
      ]
     },
     {
@@ -1806,8 +1805,8 @@
    "id": "0c9dda67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:14:21.898936Z",
-     "start_time": "2023-02-06T23:13:51.949170Z"
+     "end_time": "2023-02-07T06:15:24.494200Z",
+     "start_time": "2023-02-07T06:14:56.920132Z"
     }
    },
    "outputs": [
@@ -1815,7 +1814,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:29<00:00,  5.96s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:27<00:00,  5.49s/it]\n"
      ]
     },
     {
@@ -1851,8 +1850,8 @@
    "id": "174c8ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T23:14:29.600832Z",
-     "start_time": "2023-02-06T23:14:21.900875Z"
+     "end_time": "2023-02-07T06:15:31.703834Z",
+     "start_time": "2023-02-07T06:15:24.495883Z"
     }
    },
    "outputs": [
@@ -1860,7 +1859,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.39it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 36.44it/s]\n"
      ]
     },
     {
@@ -1877,7 +1876,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 108.32it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 120.41it/s]\n"
      ]
     },
     {
@@ -1999,6 +1998,13 @@
      "varRefreshCmd": "cat(var_dic_list()) "
     }
    },
+   "position": {
+    "height": "893.844px",
+    "left": "2190px",
+    "right": "20px",
+    "top": "120px",
+    "width": "350px"
+   },
    "types_to_exclude": [
     "module",
     "function",
@@ -2006,7 +2012,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "window_display": true
   }
  },
  "nbformat": 4,
